--- a/src/main/resources/templates/payments.html
+++ b/src/main/resources/templates/payments.html
@@ -37,8 +37,8 @@
                        class="w-full border border-gray-300 rounded px-3 py-2 text-sm focus:outline-none" />
             </div>
             <div>
-                <label class="text-sm font-medium block mb-1">Phone Number</label>
-                <input type="text" name="phone" class="w-full border border-gray-300 rounded px-3 py-2 text-sm focus:outline-none" />
+                <label class="text-sm font-medium block mb-1">Currency</label>
+                <input type="text" name="currency" th:value="${currency}" class="w-full border border-gray-300 rounded px-3 py-2 text-sm focus:outline-none" />
             </div>
             <div class="flex items-end space-x-4">
                 <button type="submit"
@@ -60,8 +60,7 @@
 
         <div class="px-4 pt-4  space-y-6">
             <form method="get" id="entriesForm">
-                <select name="size" onchange="document.getElementById('entriesForm').submit()"
-                        class="border rounded px-2 py-1">
+                <select name="size" onchange="document.getElementById('entriesForm').submit()" class="border rounded px-2 py-1">
                     <option th:selected="${pageSize == 10}" value="10">10</option>
                     <option th:selected="${pageSize == 25}" value="25">25</option>
                     <option th:selected="${pageSize == 50}" value="50">50</option>
@@ -71,6 +70,7 @@
                 <input type="hidden" name="page" th:value="${currentPage}" />
                 <input type="hidden" name="dateFrom" th:value="${dateFrom}" />
                 <input type="hidden" name="dateTo" th:value="${dateTo}" />
+                <input type="hidden" name="currency" th:value="${currency}" />
             </form>
 
             <table class="min-w-full text-sm text-left border-t border-gray-200">
@@ -103,26 +103,27 @@
             <!-- Pagination -->
             <div class="space-x-1 mt-4">
 
-                <a th:href="@{/payments(page=0, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo})}"
+                <a th:href="@{/payments(page=0, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo},  currency=${currency})}"
                    th:if="${currentPage > 0}"
                    class="px-2 py-1 border rounded hover:bg-gray-200">&laquo;</a>
 
-                <a th:href="@{/payments(page=${currentPage - 1}, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo})}"
+                <a th:href="@{/payments(page=${currentPage - 1}, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo},  currency=${currency})}"
                    th:if="${currentPage > 0}"
                    class="px-2 py-1 border rounded hover:bg-gray-100">&lt;</a>
 
                 <span th:each="i : ${#numbers.sequence(0, totalPages - 1)}">
-        <a th:href="@{/payments(page=${i}, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo})}"
+        <a th:href="@{/payments(page=${i}, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo}, currency=${currency})}"
+
            th:text="${i + 1}"
            th:class="${i == currentPage} ? 'px-3 py-1 border rounded bg-blue-900 text-white' : 'px-2 py-1 border rounded hover:bg-gray-100'">
         </a>
     </span>
 
-                <a th:href="@{/payments(page=${currentPage + 1}, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo})}"
+                <a th:href="@{/payments(page=${currentPage + 1}, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo},  currency=${currency})}"
                    th:if="${currentPage < totalPages - 1}"
                    class="px-2 py-1 border rounded hover:bg-gray-100">&gt;</a>
 
-                <a th:href="@{/payments(page=${totalPages - 1}, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo})}"
+                <a th:href="@{/payments(page=${totalPages - 1}, size=${pageSize}, dateFrom=${dateFrom}, dateTo=${dateTo},  currency=${currency})}"
                    th:if="${currentPage < totalPages - 1}"
                    class="px-2 py-1 border rounded hover:bg-gray-200">&raquo;</a>
             </div>
